Request parser (with tests)